--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta charset="utf-8">
 	<title> Main Page </title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	 <link rel="icon" type="image/x-icon" href="images/icon.png">
+	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -15,7 +14,7 @@
 		<nav class="nav">
 			<ul>
 				<li class="navli"> <a href="index.html" class="color active"> მთავარი </a> </li>
-				<li class="navli"> <a href="#" class="color"> მენიუ </a> </li>
+				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
 				<li class="navli"> <a href="#" class="color"> კონტაქტი </a> </li>
 				</ul>
 		</nav>
