updated menu page, needs english fonts to be added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
