--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -21,51 +22,56 @@
 	</header>
 	<section>
 		<div class="container">
-			<h3 class="h3menu1"> Deserved crown to our hot chocolate  👑  </h3>
-			<img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" class="hot">
-			<p> will warm you up even during the coldest nights </p>
-			<h3> Take the coffee you love the most and enjoy at home in a cozy environment </h3>
-			<img src="images/yava.jpeg" alt="coffee types">
-			<p>ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗 </p>
-		</div>
-		<div>
-			<p> Types of coffee we provide: </p>
-			<ul>
-				<li> ☕️ Brazil Mogiana </li>
-				<li> ☕️ Robusta India Kaapi Royal </li>
-				<li> ☕️ Colombia Supremo </li>
-				<li> ☕️ Arabica Guatemala </li>
-				<li> ☕️ Arabica Honduras </li>
-				<li> ☕️ Arabica Salvador </li>
-				<li> ☕️ Arabica Ethiopia Yirgacheffe </li>
-			</ul>
-			<p> ყავათა სხვა სახეობები: </p>
-			<ul>
-				<li> 🐾 ჯეზვე </li>
-				<li> 🐾 ესპრესო </li>
-				<li> 🐾 მოკა </li>
-				<li> 🐾 ფილტრი </li>
-				<li> 🐾 ფრანგული პრესი </li>
-			</ul>
+			<h3 class="h3menu1"> Deserved crown to our hot chocolate  👑 </h3>
+			<img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" class="hotchocolate">
+			<p class="p1hotchocolate"> will warm you up even during the coldest nights </p>
+			<h3 class="h3menu1"> Take the coffee you love the most and enjoy at home in a cozy environment </h3>
+			<p class="p2coffee">ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗 </p>
+			<img src="images/yava.jpeg" alt="coffee types" class="coffee">
 		</div>
 	<section>
-		<div>
-			<h3> 🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს, განსაკუთრებით თბილ ამინდში გასაგრილებლად. </h3>
-			<img src="images/khilamushi.jpeg" alt="khilamushi">
-			<p> Khilamushi is made for desert lovers, for whom whether or not product is natural and healthy matters the most. Khilamushi is Georgian dessert prepared with seasonal fruit and other secret ingredients 🤭 </p>
+		<div class="container coffeelist">
+			<div class="box1menu">
+				<h3> Types of coffee we provide: </h3>
+				<ul>
+					<li> ☕️ Brazil Mogiana </li>
+					<li> ☕️ Robusta India Kaapi Royal </li>
+					<li> ☕️ Colombia Supremo </li>
+					<li> ☕️ Arabica Guatemala </li>
+					<li> ☕️ Arabica Honduras </li>
+					<li> ☕️ Arabica Salvador </li>
+					<li> ☕️ Arabica Ethiopia Yirgacheffe </li>
+				</ul>
+			</div>
+			<div class="box1menu">
+				<h3> ყავათა სხვა სახეობები: </h3>
+				<ul>
+					<li> 🐾 ჯეზვე </li>
+					<li> 🐾 ესპრესო </li>
+					<li> 🐾 მოკა </li>
+					<li> 🐾 ფილტრი </li>
+					<li> 🐾 ფრანგული პრესი </li>
+				</ul>
+			</div>
 		</div>
 	</section>
 	<section>
-		<div> 
-			<h2> დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦 </h2>
-			<img src="images/tea.jpeg" alt="ქაცვის ჩაი">
-			<div>
+		<div class="container">
+			<h3 class="h3menu1"> 🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს, განსაკუთრებით თბილ ამინდში გასაგრილებლად. </h3>
+			<img src="images/khilamushi.jpeg" alt="khilamushi" class="Khilamushi">
+			<p class="pkhilamushi"> Khilamushi is made for desert lovers, for whom whether or not product is natural and healthy matters the most. Khilamushi is Georgian dessert prepared with seasonal fruit and other secret ingredients 🤭 </p>
+		</div>
+	</section>
+	<section>
+		<div class="container"> 
+			<h3 class="h3menu1"> დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦 </h3>
+			<div class="tea1">
 				<p> ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად. </p>
 				<p> გარდა იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ ქაცვის ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C, ვიდრე ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E, B1, B2 და ა.შ.
 				</p>
 			</div>
+			<img src="images/tea.jpeg" alt="ქაცვის ჩაი" class="tea">
 		</div>
-	</section>
 	</section>
 	<footer>
 		<div class="footer">
