finished menu page

--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
+	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alkdots/css/alkdots.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Mooli&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -22,7 +26,7 @@
 	</header>
 	<section>
 		<div class="container">
-			<h3 class="h3menu1"> Deserved crown to our hot chocolate  👑 </h3>
+			<h3 class="h3menu1 main"> Deserved crown to our hot chocolate  👑 </h3>
 			<img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" class="hotchocolate">
 			<p class="p1hotchocolate"> will warm you up even during the coldest nights </p>
 			<h3 class="h3menu1"> Take the coffee you love the most and enjoy at home in a cozy environment </h3>
@@ -31,7 +35,7 @@
 		</div>
 	<section>
 		<div class="container coffeelist">
-			<div class="box1menu">
+			<div class="box1menu englishmenu">
 				<h3> Types of coffee we provide: </h3>
 				<ul>
 					<li> ☕️ Brazil Mogiana </li>
@@ -43,7 +47,7 @@
 					<li> ☕️ Arabica Ethiopia Yirgacheffe </li>
 				</ul>
 			</div>
-			<div class="box1menu">
+			<div class="box1menu georgianmenu">
 				<h3> ყავათა სხვა სახეობები: </h3>
 				<ul>
 					<li> 🐾 ჯეზვე </li>
