final menu page

--- a/menu.html
+++ b/menu.html
@@ -61,14 +61,14 @@
 	</section>
 	<section>
 		<div class="container">
-			<h3 class="h3menu1"> 🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს, განსაკუთრებით თბილ ამინდში გასაგრილებლად. </h3>
+			<h3 class="h3menu1 main"> 🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს, განსაკუთრებით თბილ ამინდში გასაგრილებლად. </h3>
 			<img src="images/khilamushi.jpeg" alt="khilamushi" class="Khilamushi">
 			<p class="pkhilamushi"> Khilamushi is made for desert lovers, for whom whether or not product is natural and healthy matters the most. Khilamushi is Georgian dessert prepared with seasonal fruit and other secret ingredients 🤭 </p>
 		</div>
 	</section>
 	<section>
 		<div class="container"> 
-			<h3 class="h3menu1"> დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦 </h3>
+			<h3 class="h3menu1 main"> დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦 </h3>
 			<div class="tea1">
 				<p> ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად. </p>
 				<p> გარდა იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ ქაცვის ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C, ვიდრე ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E, B1, B2 და ა.შ.
