finished contact page

--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
 			<ul>
 				<li class="navli"> <a href="index.html" class="color"> მთავარი </a> </li>
 				<li class="navli"> <a href="menu.html" class="color active"> მენიუ </a> </li>
-				<li class="navli"> <a href="#" class="color"> კონტაქტი </a> </li>
+				<li class="navli"> <a href="contact.html" class="color"> კონტაქტი </a> </li>
 				</ul>
 		</nav>
 	</header>
