--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li class="navli"> <a href="index.html" class="color active"> მთავარი </a> </li>
 				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
-				<li class="navli"> <a href="#" class="color"> კონტაქტი </a> </li>
+				<li class="navli"> <a href="contact.html" class="color"> კონტაქტი </a> </li>
 				</ul>
 		</nav>
 	</header>
