updated contact page

--- a/contact2.html
+++ b/contact2.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alkdots/css/alkdots.min.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -15,9 +16,9 @@
 		<a href="index.html"> <img src="images/otakhi.jpeg" alt="otakhi's cartoon cat" class="otakhilogo"> </a>
 		<nav class="nav">
 			<ul>
-				<li class="navli"> <a href="index.html" class="color"> მთავარი </a> </li>
-				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
-				<li class="navli"> <a href="contact.html" class="color active"> კონტაქტი </a> </li>
+				<li class="navli contactpage2"> <a href="index.html" class="color"> Main Page </a> </li>
+				<li class="navli contactpage2"> <a href="menu.html" class="color"> Menu </a> </li>
+				<li class="navli contactpage2"> <a href="contact.html" class="color active"> Contact </a> </li>
 				</ul>
 		</nav>
 		<section>
@@ -25,11 +26,11 @@
 				<h3 class="h3menu1 h3contact"> You'll never feel lonely after visiting us. Fill yourself up with warmness and happiness </h3>
 				<img src="images/eyes.jpeg" alt="eyes foto otakhi" class="eyes">
 				<div class="contact">
-					<h3 class="contactinfo"> We're looking forward to hearing from you: <a href="contact2.html"> (for English 👈) </a> </h3>
+					<h3 class="contactinfo contactpage22"> We're looking forward to hearing from you: <a href="contact.html"> (for Georgian 👈) </a> </h3>
 					<ul>
-						<li> <span class="contactinfo2"> მისამართი:</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> ძმები ზუბალაშვილების ქ. 6 </a> </li>
-						<li> <span class="contactinfo2"> ტელ: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
-						<li> <span class="contactinfo2"> ელ. ფოსტა: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
+						<li class="contactpage22"> <span class="contactinfo2"> Address :</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> 6 Brothers Zubalashvili street </a> </li>
+						<li class="contactpage22"> <span class="contactinfo2"> Tel: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
+						<li class="contactpage22"> <span class="contactinfo2"> E-mail: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
 					</ul>
 				</div>
 			</div>
