--- a/contact2.html
+++ b/contact2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title> Main Page </title>
+	<title> Contact Page </title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.png">
 	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
