added contact page

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li class="navli"> <a href="index.html" class="color"> მთავარი </a> </li>
 				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
-				<li class="navli"> <a href="contact.html" class="color active"> კონტაქტი </a> </li>
+				<li class="navli"> <a href="contact2.html" class="color active"> კონტაქტი </a> </li>
 				</ul>
 		</nav>
 		<section>
