--- a/contact2.html
+++ b/contact2.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li class="navli contactpage2"> <a href="index.html" class="color"> Main Page </a> </li>
 				<li class="navli contactpage2"> <a href="menu.html" class="color"> Menu </a> </li>
-				<li class="navli contactpage2"> <a href="contact.html" class="color active"> Contact </a> </li>
+				<li class="navli contactpage2"> <a href="contact2.html" class="color active"> Contact </a> </li>
 				</ul>
 		</nav>
 		<section>
