--- a/index.html
+++ b/index.html
@@ -1,46 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title> Main Page </title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="icon" type="image/x-icon" href="images/icon.png">
-	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-	<header>
-		<a href="index.html"> <img src="images/otakhi.jpeg" alt="otakhi's cartoon cat" class="otakhilogo"> </a>
-		<nav class="nav">
-			<ul>
-				<li class="navli"> <a href="index.html" class="color active"> მთავარი </a> </li>
-				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
-				<li class="navli"> <a href="contact.html" class="color"> კონტაქტი </a> </li>
-				</ul>
-		</nav>
-	</header>
-	<section>
-		<div class="container">
-			<h3 class="h3home1 nav"> აქ ყველაფერს პირდაპირი გაგებით თვალები აქვს „ჟოლოფსაც“კი </h3>
-			<div class="block1">
-				<h3 class="h3block1"> Welcome </h3>
-				<img src="images/welcome2.jpeg" alt="welcome to otakhi" class="welcome1">
-				<p class="p1block1"> We ensure your day to be positive and full of good vibes </p>
-			</div>
-			<div class="block2">
-				<h3 class="h3block2"> We're always ready to meet you with a smile on the face and kindness in the eyes </h3>
-				<img src="images/welcome.jpeg" alt="insite of otakhi" class="welcome2">
-				<p class="p2block2"> Feel free to share your wild desires and be ready to make them true with us just by a sip of a coffee of your choise </p>
-			</div>
-		</div>
-	</section>
-	<footer>
-		<div class="footer">
-			<img src="images/otakhi2.jpeg" alt="word OTAKHI in written form" class="footerimage1">
-			<div class="divider"></div>
-			<img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" class="footerimage2">
-		</div>
-	</footer>
-</body>
+  <head>
+    <meta charset="utf-8" />
+     
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Main Page</title>
+    <script
+      src="https://kit.fontawesome.com/a0b71cd01f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="icon" type="image/x-icon" href="images/icon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+  </head>
+  <body>
+    <header>
+      <div class="conteiner">
+        <div class="section-wraper header-wrap">
+          <a href="index.html">
+            <img
+              src="images/otakhi.jpeg"
+              alt="otakhi's cartoon cat"
+              class="otakhilogo"
+            />
+          </a>
+          <nav class="nav">
+            <ul>
+              <li class="navli">
+                <a href="index.html" class="color active"> მთავარი </a>
+              </li>
+              <li class="navli">
+                <a href="menu.html" class="color"> მენიუ </a>
+              </li>
+              <li class="navli">
+                <a href="contact.html" class="color"> კონტაქტი </a>
+              </li>
+            </ul>
+          </nav>
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div class="container2">
+        <div class="section-wraper section-wraper2">
+          <h3 class="h3home1">
+            აქ ყველაფერს პირდაპირი გაგებით თვალები აქვს „ჟოლოფსაც“კი
+          </h3>
+          <div class="block1">
+            <h3>Welcome</h3>
+            <img src="images/welcome2.jpeg" alt="welcome to otakhi" />
+            <p>We ensure your day to be positive and full of good vibes</p>
+          </div>
+          <div class="block1 block2">
+            <h3>
+              We're always ready to meet you with a smile on the face and
+              kindness in the eyes
+            </h3>
+            <img src="images/welcome.jpeg" alt="insite of otakhi" />
+            <p>
+              Feel free to share your wild desires and be ready to make them
+              true with us just by a sip of a coffee of your choise
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <footer>
+      <div class="footer">
+        <img
+          src="images/otakhi2.jpeg"
+          alt="word OTAKHI in written form"
+          class="footerimage1"
+        />
+        <div class="divider"></div>
+        <img
+          src="images/otakhi3.jpeg"
+          alt="otakhi's cat in footer"
+          class="footerimage2"
+        />
+      </div>
+    </footer> -->
+  </body>
 </html>
