updated footer home page

--- a/index.html
+++ b/index.html
@@ -72,20 +72,17 @@
         </div>
       </div>
     </section>
-    <!-- <footer>
-      <div class="footer">
-        <img
-          src="images/otakhi2.jpeg"
-          alt="word OTAKHI in written form"
-          class="footerimage1"
-        />
-        <div class="divider"></div>
-        <img
-          src="images/otakhi3.jpeg"
-          alt="otakhi's cat in footer"
-          class="footerimage2"
-        />
+    <footer>
+      <div class="container2">
+        <div class="section-wraper footer">
+          <div class="footer1">
+            <img src="images/otakhi2.jpeg" alt="word OTAKHI in written form" />
+          </div>
+          <div class="footer1">
+            <img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+          </div>
+        </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
