added footer responsive

--- a/index.html
+++ b/index.html
@@ -74,12 +74,17 @@
     </section>
     <footer>
       <div class="container2">
-        <div class="section-wraper footer">
-          <div class="footer1">
-            <img src="images/otakhi2.jpeg" alt="word OTAKHI in written form" />
-          </div>
-          <div class="footer1">
-            <img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+        <div class="section-wraper footer1-1">
+          <div class="footer1-2">
+            <div class="footer1">
+              <img
+                src="images/otakhi2.jpeg"
+                alt="word OTAKHI in written form"
+              />
+            </div>
+            <div class="footer1">
+              <img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+            </div>
           </div>
         </div>
       </div>
