--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title> Contact Page </title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="icon" type="image/x-icon" href="images/icon.png">
-	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css">
-	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alkdots/css/alkdots.min.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+	<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Main Page</title>
+    <script
+      src="https://kit.fontawesome.com/a0b71cd01f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="icon" type="image/x-icon" href="images/icon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+  </head>
 <body>
 	<header>
-		<a href="index.html"> <img src="images/otakhi.jpeg" alt="otakhi's cartoon cat" class="otakhilogo"> </a>
-		<nav class="nav">
-			<ul>
-				<li class="navli"> <a href="index.html" class="color"> მთავარი </a> </li>
-				<li class="navli"> <a href="menu.html" class="color"> მენიუ </a> </li>
-				<li class="navli"> <a href="contact.html" class="color active"> კონტაქტი </a> </li>
-				</ul>
-		</nav>
-		<section>
+		<div class="conteiner">
+			<div class="section-wraper header-wrap">
+				<a href="index.html">
+					<img
+						src="images/otakhi.jpeg"
+						alt="otakhi's cartoon cat"
+						class="otakhilogo"
+					/>
+				</a>
+				<nav class="nav">
+					<ul>
+						<li class="navli">
+							<a href="index.html" class="color active"> მთავარი </a>
+						</li>
+						<li class="navli">
+							<a href="menu.html" class="color"> მენიუ </a>
+						</li>
+						<li class="navli">
+							<a href="contact.html" class="color"> კონტაქტი </a>
+						</li>
+					</ul>
+				</nav>
+				<i class="fa-solid fa-bars"></i>
+			</div>
+		</div>
+	</header>
+	<section>
 			<div class="container">
 				<h3 class="h3menu1 h3contact"> You'll never feel lonely after visiting us. Fill yourself up with warmness and happiness </h3>
 				<img src="images/eyes.jpeg" alt="eyes foto otakhi" class="eyes">
@@ -33,12 +59,22 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+	</section>
 	<footer>
-		<div class="footer">
-			<img src="images/otakhi2.jpeg" alt="word OTAKHI in written form" class="footerimage1">
-			<div class="divider"></div>
-			<img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" class="footerimage2">
+		<div class="container2">
+			<div class="section-wraper footer1-1">
+				<div class="footer1-2">
+					<div class="footer1">
+						<img
+							src="images/otakhi2.jpeg"
+							alt="word OTAKHI in written form"
+						/>
+					</div>
+					<div class="footer1">
+						<img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+					</div>
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
