--- a/contact2.html
+++ b/contact2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Main Page</title>
     <script
       src="https://kit.fontawesome.com/a0b71cd01f.js"
@@ -53,7 +53,7 @@
 				<div class="contact">
 					<h3 class="contactinfo contactpage22"> We're looking forward to hearing from you: <a href="contact.html"> (for Georgian 👈) </a> </h3>
 					<ul>
-						<li class="contactpage22"> <span class="contactinfo2"> Address :</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> 6 Brothers Zubalashvili street </a> </li>
+						<li class="contactpage22"> <span class="contactinfo2"> Address :</span> <iframe></iframe><a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"></iframe> 6 Brothers Zubalashvili street </a> </li>
 						<li class="contactpage22"> <span class="contactinfo2"> Tel: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
 						<li class="contactpage22"> <span class="contactinfo2"> E-mail: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
 					</ul>
