--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Main Page</title>
     <script
       src="https://kit.fontawesome.com/a0b71cd01f.js"
@@ -17,104 +17,136 @@
     <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
-  </head>\
-<body>
-	<header>
-		<div class="conteiner">
-			<div class="section-wraper header-wrap">
-				<a href="index.html">
-					<img
-						src="images/otakhi.jpeg"
-						alt="otakhi's cartoon cat"
-						class="otakhilogo"
-					/>
-				</a>
-				<nav class="nav">
-					<ul>
-						<li class="navli">
-							<a href="index.html" class="color active"> მთავარი </a>
-						</li>
-						<li class="navli">
-							<a href="menu.html" class="color"> მენიუ </a>
-						</li>
-						<li class="navli">
-							<a href="contact.html" class="color"> კონტაქტი </a>
-						</li>
-					</ul>
-				</nav>
-				<i class="fa-solid fa-bars"></i>
-			</div>
-		</div>
-	</header>
-	<section>
-		<div class="container">
-			<h3 class="h3menu1 main"> Deserved crown to our hot chocolate  👑 </h3>
-			<img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" class="hotchocolate">
-			<p class="p1hotchocolate"> will warm you up even during the coldest nights </p>
-			<h3 class="h3menu1"> Take the coffee you love the most and enjoy at home in a cozy environment </h3>
-			<p class="p2coffee">ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗 </p>
-			<img src="images/yava.jpeg" alt="coffee types" class="coffee">
-		</div>
-	<section>
-		<div class="container coffeelist">
-			<div class="box1menu englishmenu">
-				<h3> Types of coffee we provide: </h3>
-				<ul>
-					<li> ☕️ Brazil Mogiana </li>
-					<li> ☕️ Robusta India Kaapi Royal </li>
-					<li> ☕️ Colombia Supremo </li>
-					<li> ☕️ Arabica Guatemala </li>
-					<li> ☕️ Arabica Honduras </li>
-					<li> ☕️ Arabica Salvador </li>
-					<li> ☕️ Arabica Ethiopia Yirgacheffe </li>
-				</ul>
-			</div>
-			<div class="box1menu georgianmenu">
-				<h3> ყავათა სხვა სახეობები: </h3>
-				<ul>
-					<li> 🐾 ჯეზვე </li>
-					<li> 🐾 ესპრესო </li>
-					<li> 🐾 მოკა </li>
-					<li> 🐾 ფილტრი </li>
-					<li> 🐾 ფრანგული პრესი </li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div class="container">
-			<h3 class="h3menu1 main"> 🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს, განსაკუთრებით თბილ ამინდში გასაგრილებლად. </h3>
-			<img src="images/khilamushi.jpeg" alt="khilamushi" class="Khilamushi">
-			<p class="pkhilamushi"> Khilamushi is made for desert lovers, for whom whether or not product is natural and healthy matters the most. Khilamushi is Georgian dessert prepared with seasonal fruit and other secret ingredients 🤭 </p>
-		</div>
-	</section>
-	<section>
-		<div class="container"> 
-			<h3 class="h3menu1 main"> დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦 </h3>
-			<div class="tea1">
-				<p> ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად. </p>
-				<p> გარდა იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ ქაცვის ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C, ვიდრე ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E, B1, B2 და ა.შ.
-				</p>
-			</div>
-			<img src="images/tea.jpeg" alt="ქაცვის ჩაი" class="tea">
-		</div>
-	</section>
-	<footer>
-		<div class="container2">
-			<div class="section-wraper footer1-1">
-				<div class="footer1-2">
-					<div class="footer1">
-						<img
-							src="images/otakhi2.jpeg"
-							alt="word OTAKHI in written form"
-						/>
-					</div>
-					<div class="footer1">
-						<img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="conteiner">
+        <div class="section-wraper header-wrap">
+          <a href="index.html">
+            <img
+              src="images/otakhi.jpeg"
+              alt="otakhi's cartoon cat"
+              class="otakhilogo"
+            />
+          </a>
+          <nav class="nav">
+            <ul>
+              <li class="navli">
+                <a href="index.html" class="color active"> მთავარი </a>
+              </li>
+              <li class="navli">
+                <a href="menu.html" class="color"> მენიუ </a>
+              </li>
+              <li class="navli">
+                <a href="contact.html" class="color"> კონტაქტი </a>
+              </li>
+            </ul>
+          </nav>
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div>
+          <h3 class="h3menu1 main">Deserved crown to our hot chocolate 👑</h3>
+          <img
+            src="images/hotchocolate.jpeg"
+            alt="a cup of hot chocolate"
+            class="hotchocolate"
+          />
+          <p class="p1hotchocolate">
+            will warm you up even during the coldest nights
+          </p>
+        </div>
+        <div>
+          <h3 class="h3menu1">
+            Take the coffee you love the most and enjoy at home in a cozy
+            environment
+          </h3>
+          <p class="p2coffee">
+            ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და
+            სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗
+          </p>
+          <img src="images/yava.jpeg" alt="coffee types" class="coffee" />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container coffeelist">
+        <div class="box1menu englishmenu">
+          <h3>Types of coffee we provide:</h3>
+          <ul>
+            <li>☕️ Brazil Mogiana</li>
+            <li>☕️ Robusta India Kaapi Royal</li>
+            <li>☕️ Colombia Supremo</li>
+            <li>☕️ Arabica Guatemala</li>
+            <li>☕️ Arabica Honduras</li>
+            <li>☕️ Arabica Salvador</li>
+            <li>☕️ Arabica Ethiopia Yirgacheffe</li>
+          </ul>
+        </div>
+        <div class="box1menu georgianmenu">
+          <h3>ყავათა სხვა სახეობები:</h3>
+          <ul>
+            <li>🐾 ჯეზვე</li>
+            <li>🐾 ესპრესო</li>
+            <li>🐾 მოკა</li>
+            <li>🐾 ფილტრი</li>
+            <li>🐾 ფრანგული პრესი</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h3 class="h3menu1 main">
+          🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს,
+          განსაკუთრებით თბილ ამინდში გასაგრილებლად.
+        </h3>
+        <img src="images/khilamushi.jpeg" alt="khilamushi" class="Khilamushi" />
+        <p class="pkhilamushi">
+          Khilamushi is made for desert lovers, for whom whether or not product
+          is natural and healthy matters the most. Khilamushi is Georgian
+          dessert prepared with seasonal fruit and other secret ingredients 🤭
+        </p>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <h3 class="h3menu1 main">დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦</h3>
+        <div class="tea1">
+          <p>
+            ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი
+            ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის
+            სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად.
+          </p>
+          <p>
+            გარდა იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ
+            ქაცვის ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C,
+            ვიდრე ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E, B1,
+            B2 და ა.შ.
+          </p>
+        </div>
+        <img src="images/tea.jpeg" alt="ქაცვის ჩაი" class="tea" />
+      </div>
+    </section>
+    <footer>
+      <div class="container2">
+        <div class="section-wraper footer1-1">
+          <div class="footer1-2">
+            <div class="footer1">
+              <img
+                src="images/otakhi2.jpeg"
+                alt="word OTAKHI in written form"
+              />
+            </div>
+            <div class="footer1">
+              <img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
