updated section 1 menu page

--- a/menu.html
+++ b/menu.html
@@ -48,31 +48,27 @@
     </header>
     <section>
       <div class="container">
-        <div>
-          <h3 class="h3menu1 main">Deserved crown to our hot chocolate 👑</h3>
-          <img
-            src="images/hotchocolate.jpeg"
-            alt="a cup of hot chocolate"
-            class="hotchocolate"
-          />
+        <div class="section-wraper menu1-1">
+          <h3>Deserved crown to our hot chocolate 👑</h3>
+          <img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" />
           <p class="p1hotchocolate">
             will warm you up even during the coldest nights
           </p>
         </div>
-        <div>
-          <h3 class="h3menu1">
+        <div class="section-wraper menu1-1 menu1-2">
+          <h3>
             Take the coffee you love the most and enjoy at home in a cozy
             environment
           </h3>
-          <p class="p2coffee">
+          <p>
             ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და
             სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗
           </p>
-          <img src="images/yava.jpeg" alt="coffee types" class="coffee" />
+          <img src="images/yava.jpeg" alt="coffee types" />
         </div>
       </div>
     </section>
-    <section>
+    <!-- <section>
       <div class="container coffeelist">
         <div class="box1menu englishmenu">
           <h3>Types of coffee we provide:</h3>
@@ -147,6 +143,6 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
