added section1 responsive menu page

--- a/menu.html
+++ b/menu.html
@@ -51,20 +51,19 @@
         <div class="section-wraper menu1-1">
           <h3>Deserved crown to our hot chocolate 👑</h3>
           <img src="images/hotchocolate.jpeg" alt="a cup of hot chocolate" />
-          <p class="p1hotchocolate">
-            will warm you up even during the coldest nights
-          </p>
+          <p>will warm you up even during the coldest nights</p>
         </div>
         <div class="section-wraper menu1-1 menu1-2">
           <h3>
             Take the coffee you love the most and enjoy at home in a cozy
             environment
           </h3>
+          <img src="images/yava.jpeg" alt="coffee types" />
+
           <p>
             ჩვენი ოთახის ყავა უკვე თქვენს ოთახში ☕️ აირჩიე მარცვლები და
             სასურველი დაფქვა, ჩვენ კი სახლამდე მოგიტანთ 🚗
           </p>
-          <img src="images/yava.jpeg" alt="coffee types" />
         </div>
       </div>
     </section>
