updated section2 menu page

--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,11 @@
       src="https://kit.fontawesome.com/a0b71cd01f.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.web-fonts.ge/fonts/bpg-mikheil-stefane/css/bpg-mikheil-stefane.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="icon" type="image/x-icon" href="images/icon.png" />
     <link
@@ -46,7 +51,7 @@
         </div>
       </div>
     </header>
-    <section>
+    <!-- <section>
       <div class="container">
         <div class="section-wraper menu1-1">
           <h3>Deserved crown to our hot chocolate 👑</h3>
@@ -66,48 +71,57 @@
           </p>
         </div>
       </div>
+    </section> -->
+    <section>
+      <div class="section-wraper">
+        <div class="coffee1-1">
+          <div class="english-menu">
+            <h3>Types of coffee we provide:</h3>
+            <ul>
+              <li>☕️ Brazil Mogiana</li>
+              <li>☕️ Robusta India Kaapi Royal</li>
+              <li>☕️ Colombia Supremo</li>
+              <li>☕️ Arabica Guatemala</li>
+              <li>☕️ Arabica Honduras</li>
+              <li>☕️ Arabica Salvador</li>
+              <li>☕️ Arabica Ethiopia Yirgacheffe</li>
+            </ul>
+          </div>
+          <div class="georgianmenu">
+            <h3>ყავათა სხვა სახეობები:</h3>
+            <ul>
+              <li>🐾 ჯეზვე</li>
+              <li>🐾 ესპრესო</li>
+              <li>🐾 მოკა</li>
+              <li>🐾 ფილტრი</li>
+              <li>🐾 ფრანგული პრესი</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="section-wraper">
+        <div class="khilamushi1-1">
+          <h3 class="h3menu1 main">
+            🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს,
+            განსაკუთრებით თბილ ამინდში გასაგრილებლად.
+          </h3>
+          <img
+            src="images/khilamushi.jpeg"
+            alt="khilamushi"
+            class="Khilamushi"
+          />
+          <p class="pkhilamushi">
+            Khilamushi is made for desert lovers, for whom whether or not
+            product is natural and healthy matters the most. Khilamushi is
+            Georgian dessert prepared with seasonal fruit and other secret
+            ingredients 🤭
+          </p>
+        </div>
+      </div>
     </section>
     <!-- <section>
-      <div class="container coffeelist">
-        <div class="box1menu englishmenu">
-          <h3>Types of coffee we provide:</h3>
-          <ul>
-            <li>☕️ Brazil Mogiana</li>
-            <li>☕️ Robusta India Kaapi Royal</li>
-            <li>☕️ Colombia Supremo</li>
-            <li>☕️ Arabica Guatemala</li>
-            <li>☕️ Arabica Honduras</li>
-            <li>☕️ Arabica Salvador</li>
-            <li>☕️ Arabica Ethiopia Yirgacheffe</li>
-          </ul>
-        </div>
-        <div class="box1menu georgianmenu">
-          <h3>ყავათა სხვა სახეობები:</h3>
-          <ul>
-            <li>🐾 ჯეზვე</li>
-            <li>🐾 ესპრესო</li>
-            <li>🐾 მოკა</li>
-            <li>🐾 ფილტრი</li>
-            <li>🐾 ფრანგული პრესი</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
-        <h3 class="h3menu1 main">
-          🤗 თუ ერთხელ გასინჯე შეიძლება შენი საყვარელი დესერტი გახდეს,
-          განსაკუთრებით თბილ ამინდში გასაგრილებლად.
-        </h3>
-        <img src="images/khilamushi.jpeg" alt="khilamushi" class="Khilamushi" />
-        <p class="pkhilamushi">
-          Khilamushi is made for desert lovers, for whom whether or not product
-          is natural and healthy matters the most. Khilamushi is Georgian
-          dessert prepared with seasonal fruit and other secret ingredients 🤭
-        </p>
-      </div>
-    </section>
-    <section>
       <div class="container">
         <h3 class="h3menu1 main">დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦</h3>
         <div class="tea1">
