updated section3 menu page

--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,10 @@
       href="https://cdn.web-fonts.ge/fonts/bpg-mikheil-stefane/css/bpg-mikheil-stefane.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.web-fonts.ge/fonts/bpg-no9/css/bpg-no9.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="icon" type="image/x-icon" href="images/icon.png" />
     <link
@@ -119,22 +123,18 @@
     </section>
     <section>
       <div class="section-wraper">
-        <div class="tea-section">
-          <h3 class="h3menu1 main">დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦</h3>
-          <div class="tea1">
-            <p>
-              ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი
-              ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის
-              სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად.
-            </p>
-            <p>
-              გარდა იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ
-              ქაცვის ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C,
-              ვიდრე ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E,
-              B1, B2 და ა.შ.
-            </p>
-          </div>
+        <div class="tea1">
+          <h3>დაპატიჟე ოჯახი ქაცვის ჩაიზე 👨‍👩‍👧‍👦</h3>
           <img src="images/tea.jpeg" alt="ქაცვის ჩაი" class="tea" />
+          <p>
+            ვინც ქაცვის ჩაის არ იცნობს ან ჯერ კიდევ არ გაუსიჯნავს, ის ჩვენი
+            ერთ-ერთი პოპულარული პროდუქტია, განსაკუთრებით ზამთრის და გაზაფხულის
+            სეზონზე იმუნიტეტის ასამაღლებლად და ორგანიზმის გასაძლიერებლად. გარდა
+            იმისა, რომ გემრიელია, არის ძალიან სასარგებლოც, რადგან თვითონ ქაცვის
+            ნაყოფი მდიდარია ვიტამინებით. მასში 2-ჯერ მეტია ვიტამინი C, ვიდრე
+            ციტრუსებში 🍊 გარდა C ვიტამინისა ის შეიცავს ვიტამინებს: E, B1, B2 და
+            ა.შ.
+          </p>
         </div>
       </div>
     </section>
