--- a/menu.html
+++ b/menu.html
@@ -39,12 +39,12 @@
             />
           </a>
           <nav class="nav">
-            <ul>
+            <ul class="nav-ul">
               <li class="navli">
-                <a href="index.html" class="color active"> მთავარი </a>
+                <a href="index.html" class="color"> მთავარი </a>
               </li>
               <li class="navli">
-                <a href="menu.html" class="color"> მენიუ </a>
+                <a href="menu.html" class="color active"> მენიუ </a>
               </li>
               <li class="navli">
                 <a href="contact.html" class="color"> კონტაქტი </a>
@@ -55,7 +55,7 @@
         </div>
       </div>
     </header>
-    <!-- <section>
+    <section>
       <div class="container">
         <div class="section-wraper menu1-1">
           <h3>Deserved crown to our hot chocolate 👑</h3>
@@ -75,13 +75,13 @@
           </p>
         </div>
       </div>
-    </section> -->
+    </section>
     <section>
       <div class="section-wraper">
         <div class="coffee1-1">
-          <div class="english-menu">
-            <h3>Types of coffee we provide:</h3>
-            <ul>
+          <div class="english-menu menu-list2">
+            <h3 class="menu-list">Types of coffee we provide:</h3>
+            <ul class="menu-list">
               <li>☕️ Brazil Mogiana</li>
               <li>☕️ Robusta India Kaapi Royal</li>
               <li>☕️ Colombia Supremo</li>
@@ -91,9 +91,9 @@
               <li>☕️ Arabica Ethiopia Yirgacheffe</li>
             </ul>
           </div>
-          <div class="georgianmenu">
-            <h3>ყავათა სხვა სახეობები:</h3>
-            <ul>
+          <div class="georgianmenu menu-list2">
+            <h3 class="menu-list">ყავათა სხვა სახეობები:</h3>
+            <ul class="menu-list">
               <li>🐾 ჯეზვე</li>
               <li>🐾 ესპრესო</li>
               <li>🐾 მოკა</li>
@@ -155,6 +155,5 @@
         </div>
       </div>
     </footer>
-    -->
   </body>
 </html>
