--- a/contact2.html
+++ b/contact2.html
@@ -30,15 +30,15 @@
 					/>
 				</a>
 				<nav class="nav">
-					<ul>
+					<ul class="nav-ul">
 						<li class="navli">
-							<a href="index.html" class="color active"> მთავარი </a>
+							<a href="index.html" class="color"> მთავარი </a>
 						</li>
 						<li class="navli">
 							<a href="menu.html" class="color"> მენიუ </a>
 						</li>
 						<li class="navli">
-							<a href="contact.html" class="color"> კონტაქტი </a>
+							<a href="contact.html" class="color active"> კონტაქტი </a>
 						</li>
 					</ul>
 				</nav>
