--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             />
           </a>
           <nav class="nav">
-            <ul>
+            <ul class="nav-ul">
               <li class="navli">
                 <a href="index.html" class="color active"> მთავარი </a>
               </li>
