updated header and finished menu page resolutions

--- a/menu.html
+++ b/menu.html
@@ -38,20 +38,20 @@
               class="otakhilogo"
             />
           </a>
-          <nav class="nav">
+          <nav class="nav-nav">
             <ul class="nav-ul">
-              <li class="navli">
+              <li>
                 <a href="index.html" class="color"> მთავარი </a>
               </li>
-              <li class="navli">
+              <li>
                 <a href="menu.html" class="color active"> მენიუ </a>
               </li>
-              <li class="navli">
+              <li>
                 <a href="contact.html" class="color"> კონტაქტი </a>
               </li>
             </ul>
           </nav>
-          <i class="fa-solid fa-bars"></i>
+          <!-- <i class="fa-solid fa-bars"></i> -->
         </div>
       </div>
     </header>
