--- a/contact.html
+++ b/contact.html
@@ -46,17 +46,19 @@
 			</div>
 		</div>
 	</header>
+
 	<section>
-			<div class="container">
+		<div class="container">
+			<div class="section-wraper">
 				<h3 class="h3menu1 h3contact"> You'll never feel lonely after visiting us. Fill yourself up with warmness and happiness </h3>
 				<img src="images/eyes.jpeg" alt="eyes foto otakhi" class="eyes">
 				<div class="contact">
-					<h3 class="contactinfo"> We're looking forward to hearing from you: <a href="contact2.html"> (for English 👈) </a> </h3>
-					<ul>
-						<li> <span class="contactinfo2"> მისამართი:</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> ძმები ზუბალაშვილების ქ. 6 </a> </li>
-						<li> <span class="contactinfo2"> ტელ: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
-						<li> <span class="contactinfo2"> ელ. ფოსტა: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
-					</ul>
+					<h3 class="contactinfo"> We're looking forward to hearing from you: <a href="contact2.html"> (for English 👈) </a></h3>
+						<ul>
+							<li> <span class="contactinfo2"> მისამართი:</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> ძმები ზუბალაშვილების ქ. 6 </a> </li>
+							<li> <span class="contactinfo2"> ტელ: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
+							<li> <span class="contactinfo2"> ელ. ფოსტა: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
+						</ul>
 				</div>
 			</div>
 	</section>
